# portfolio_api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
http/: api_requests.http
src/: api_docs.rs  lib.rs  main.rs  routes.rs
src/db/: connection.rs  jobs_db.rs  mod.rs  proficiency_enum.rs  projects_db.rs  skills_db.rs
src/handlers/: jobs.rs  mod.rs  projects.rs  skills.rs
src/models/: job.rs  mod.rs  project.rs  skill.rs  technology.rs
tests/: mod.rs
tests/integration/: env_connection_test.rs  fetch_jobs_tests.rs  fetch_projects_test.rs  fetch_skills_test.rs  mod.rs  test_utils.rs
