[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
dotenv = "0.15"
hyper = "1.6.0"
tower = "0.5.2"
